Firewall/rules.v4
*filter
:INPUT ACCEPT [2407:1009056]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2258:1029288]
-A INPUT -i lo -m comment --comment "Accept incoming to loopback" -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "Allow all established connections" -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -m comment --comment "Allow incoming SSH" -j ACCEPT
-A INPUT -p icmp --icmp-type 8 -m state --state NEW,ESTABLISHED,RELATED -m comment --comment "Allow incoming ICMP request" -j ACCEPT
-A INPUT -m comment --comment "Drop everything else incomming" -j DROP
-A OUTPUT -m conntrack --ctstate ESTABLISHED,RELATED -m comment --comment "Allow all established connections" -j ACCEPT
-A OUTPUT -m owner --uid-owner corp-guest -m conntrack --ctstate NEW -m comment --comment "Drop any new traffic from corp-guest user" -j DROP
-A OUTPUT -m owner --gid-owner root -m conntrack --ctstate NEW -m comment --comment "Allow traffic for root group users" -j ACCEPT
-A OUTPUT -m owner --gid-owner adm -m conntrack --ctstate NEW -m comment --comment "Allow traffic for adm group users" -j ACCEPT
-A OUTPUT -m owner --gid-owner admin -m conntrack --ctstate NEW -m comment --comment "Allow traffic for admin group users" -j ACCEPT
-A OUTPUT -m owner --uid-owner _apt -m conntrack --ctstate NEW -m comment --comment "Allow outgoing apt traffic" -j ACCEPT
-A OUTPUT -o lo -m comment --comment "Accept outgoing from loopback" -j ACCEPT
-A OUTPUT -p icmp --icmp-type 0 -m state --state ESTABLISHED,RELATED -m comment --comment "Allow outgoing ICMP reply" -j ACCEPT
-A OUTPUT -p icmp ! --icmp-type 0 -m state --state ESTABLISHED,RELATED -m comment --comment "Drop outgoing ICMP if not reply" -j DROP
-A OUTPUT -p udp -m multiport --dports 53,123 -m conntrack --ctstate NEW -m comment --comment "Allow outgoing UDP DNS,NTP" -j ACCEPT
-A OUTPUT -p tcp --dport 53 -m conntrack --ctstate NEW -m comment --comment "Allow outgoing TCP DNS" -j ACCEPT
-A OUTPUT -m comment --comment "Drop everything else outgoing" -j DROP
COMMIT
